--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -55,3 +55,20 @@
   transform: scale(1.05);
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
 }
+
+.card button {
+  background-color: #e495a9;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 1em;
+  margin-top: 15px;
+  padding: 10px 20px;
+  transition: background-color 0.3s;
+  font-family: 'SF Pro Display', sans-serif;
+}
+
+.card button:hover {
+  background-color: #e495a9;
+}
