--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -57,21 +57,29 @@
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
 }
 
-.card button {
+.modern-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #E495A9;
   border: none;
-  border-radius: 5px;
+  border-radius: 30px;
   color: white;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 0.9em; /* Reduzido o tamanho da fonte */
   margin-top: 15px;
-  padding: 10px 20px;
-  transition: background-color 0.3s;
+  padding: 8px 16px; /* Reduzido o padding */
   font-family: 'SF Pro Display', sans-serif;
+  text-transform: uppercase;
+  transition: background-color 0.3s;
+  width: fit-content;
+  margin: 0 auto; /* Centraliza o botão no card */
 }
 
-.card button:hover {
-  background-color: #E495A9;
+.modern-button .cart-icon {
+  margin-right: 8px; /* Ajustado o espaço entre o ícone e o texto */
+  width: 18px; /* Ajustado o tamanho do ícone */
+  height: 18px;
 }
 
 .carousel-controls {
@@ -89,44 +97,7 @@
   font-size: 1em;
   margin: 0 10px;
   padding: 10px 20px;
-  transition: background-color 0.3s;
 }
-
-.carousel-controls button:hover {
-  background-color: #0056b3;
-}
-
-.card .mobile-button {
-  display: none;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  background-color: #E495A9;
-  border: none;
-  border-radius: 50%;
-  color: white;
-  cursor: pointer;
-  font-size: 1.2em;
-  padding: 10px;
-  transition: background-color 0.3s;
-}
-
-.card .mobile-button:hover {
-  background-color: #218838;
-}
-
-@media (max-width: 768px) {
-  .card .mobile-button {
-    display: block;
-  }
-
-  .card button {
-    display: none;
-  }
-}
-
-
-/* Outros estilos existentes... */
 
 .card .flavors {
   text-align: left;
@@ -150,14 +121,32 @@
   margin-right: 5px;
 }
 
-.card .mobile-button {
-  display: none;
+@media (max-width: 768px) {
+  .card .mobile-button {
+    display: block;
+  }
+
+  .card button {
+    display: block; /* Alterado para sempre mostrar o botão */
+  }
 }
 
 @media (max-width: 600px) {
   .card .mobile-button {
     display: inline-block;
+    position: relative;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
+  }
+
+  .modern-button {
+    font-size: 0.8em; /* Reduzido o tamanho da fonte para celular */
+    padding: 6px 12px; /* Reduzido o padding para celular */
+  }
+
+  .modern-button .cart-icon {
+    width: 16px; /* Ajustado o tamanho do ícone para celular */
+    height: 16px;
   }
 }
-
-
